--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ box-sizing: border-box;
 body{
     font-family:"popping", sans-serif;
     margin: 0;
-    background-image:linear-gradient(rgba(0, 0, 0, 0.753),rgba(0, 0, 0, 0.753)),url(/snow.jpg);
+    background-image:linear-gradient(rgba(0, 0, 0, 0.753),rgba(0, 0, 0, 0.753)),url(snow.jpg);
     background-size:contain;
     min-height:100vh;
     background-position: center;
